--- a/API/package.json
+++ b/API/package.json
@@ -9,7 +9,6 @@
     "async": "^1.1.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.8.1",
-    "connect-multiparty": "^1.2.5",
     "crypto": "0.0.3",
     "errorhandler": "~1.2.0",
     "express": "4.8.8",
@@ -19,6 +18,7 @@
     "lodash-node": "^3.9.3",
     "mongoose": "~3.8.15",
     "morgan": "~1.3.0",
+    "multer": "^0.1.8",
     "node-fs": "~0.1.7",
     "nodemailer": "~0.7.1",
     "passport": "^0.2.2",
