--- a/Client/bower.json
+++ b/Client/bower.json
@@ -10,7 +10,8 @@
     "angular-touch": "~1.3.15",
     "angular-cookies": "~1.3.15",
     "angular-moment": "~0.10.1",
-    "angular-bootstrap": "~0.13.0",    
+    "angular-bootstrap": "~0.13.0",
+    "async": "~1.1.0",
     "ng-file-upload": "~4.1.3",
     "fontawesome": "~4.3.0",
     "jquery": "~2.1.4",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "bootswatch-dist": "superhero",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "async": "~1.1.0"
   }
 }
